--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <div class="main">
       <div class="left-empty"></div>
       <div class="calculator">
-        <div class="screen"><div class=""</div>
+        <div class="screen"></div>
         <div class="body">
           <div class="numbers">
-            <button class="number" id="1">1</button>
-            <button class="number" id="2">2</button>
-            <button class="number" id="3">3</button>
-            <button class="number" id="4">4</button>
-            <button class="number" id="5">5</button>
-            <button class="number" id="6">6</button>
-            <button class="number" id="7">7</button>
-            <button class="number" id="8">8</button>
-            <button class="number" id="9">9</button>
+            <button class="number" id="num1">1</button>
+            <button class="number" id="num2">2</button>
+            <button class="number" id="num3">3</button>
+            <button class="number" id="num4">4</button>
+            <button class="number" id="num5">5</button>
+            <button class="number" id="num6">6</button>
+            <button class="number" id="num7">7</button>
+            <button class="number" id="num8">8</button>
+            <button class="number" id="num9">9</button>
           </div>
           <div class="operators">
-            <button class="operator">+</button>
-            <button class="operator">-</button>
-            <button class="operator">÷</button>
-            <button class="operator">×</button>
-            <button class="operator">=</button>
+            <button class="operator" id="operator-plus">+</button>
+            <button class="operator" id="operator-minus">-</button>
+            <button class="operator" id="operator-divison">÷</button>
+            <button class="operator" id="operator-multiplication">×</button>
+            <button class="operator" id="operator-equal">=</button>
           </div>
         </div>
       </div>
