Fully working calculator with minor design changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="title">Calculator</div>
+      <div class="title"></div>
     </div>
     <div class="main">
       <div class="left-empty"></div>
@@ -27,13 +27,17 @@
             <button class="number" id="num7">7</button>
             <button class="number" id="num8">8</button>
             <button class="number" id="num9">9</button>
+            <button class="number" id="num0">0</button>
+            <button class="number" id="numDot">.</button>
+            <button class="number" id="operator-equal">=</button>
           </div>
           <div class="operators">
+            <button class="operator" id="operator-back">C</button>
+            <button class="operator" id="operator-reset">CE</button>
             <button class="operator" id="operator-plus">+</button>
             <button class="operator" id="operator-minus">-</button>
-            <button class="operator" id="operator-divison">÷</button>
+            <button class="operator" id="operator-division">÷</button>
             <button class="operator" id="operator-multiplication">×</button>
-            <button class="operator" id="operator-equal">=</button>
           </div>
         </div>
       </div>
